# simplefinance

./: .dockerignore  .gitignore  BUILD.md  Dockerfile  README.md  build.gradle  build.sh  settings.gradle  stable.sh
.zed/: tasks.json
api/: Cargo.toml  Dockerfile  build.gradle  migrate.md
api-rust/: .gitignore  Cargo.toml  Dockerfile  migrate.md  todo.md
api-rust/src/: api.rs  db.rs  main.rs  schema.rs
api-rust/src/account/: api.rs  db.rs  schema.rs
api-rust/src/issue/: api.rs  schema.rs
api-rust/src/setting/: api.rs  db.rs  mod.rs  schema.rs
api-rust/src/statistics/: api.rs  mod.rs  schema.rs
api-rust/src/transaction/: api.rs  db.rs  schema.rs
api-rust/static/: index.html
api-rust/static/assets/: index-55004b8a.js  index-bf072526.css
api/migrations/: V10__add_account_hidden.sql  V1__initial.sql  V2__rename_setting.sql  V3__create_expenses.sql  V4__add_external_to_expenses.sql  V5__add_transactions_hidden.sql  V6__add_transfer_without_balance_ignored.sql  V7__migrate_transfer_without_balance_ignored_data.sql  V8__add_no_regular_balance.sql  V9__migrate_no_regular_balance_data.sql
api/src/: api.rs  main.rs  util.rs
api/src/account/: db.rs  schema.rs
api/src/expense/: api.rs  db.rs  mod.rs  schema.rs
api/src/issue/: api.rs  schema.rs
api/src/setting/: api.rs  db.rs  schema.rs
api/src/statistics/: api.rs  schema.rs
api/src/transaction/: db.rs  schema.rs
src/main/resources/: application.properties
src/test/resources/: test-application.properties
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  main.tsx  style.css
(+128 files in other folders)
