[package]
name = "simplefinance-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.7"
r2d2 = "0.8"
r2d2_sqlite = "0.24"
rusqlite = "0.31"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
strum = "0.26"
strum_macros = "0.26"
refinery = { version = "0.8", features = ["rusqlite"] }
rust_decimal = { version = "1.35.0", features = ["serde", "serde-with-float"] }
uuid = { version = "1.7.0", features = ["v4"] }
const_format = "0.2"
anyhow = "1.0"